<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20sp"
        android:layout_marginBottom="10sp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/edit_title_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="120sp"
            android:fontFamily="@font/questrial"
            android:text="@string/title_title" />

        <EditText
            android:id="@+id/edit_title_input"
            android:layout_width="281dp"
            android:layout_height="wrap_content"
            android:layout_margin="10sp"
            android:ems="10"
            android:inputType="textPersonName" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10sp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/edit_author_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="120sp"
            android:fontFamily="@font/questrial"
            android:text="@string/author_title" />

        <EditText
            android:id="@+id/edit_author_input"
            android:layout_width="281dp"
            android:layout_height="wrap_content"
            android:layout_margin="10sp"
            android:ems="10"
            android:inputType="textPersonName" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/edit_note_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="120sp"
            android:fontFamily="@font/questrial"
            android:text="@string/note_title" />

        <EditText
            android:id="@+id/edit_note_input"
            android:layout_width="281dp"
            android:layout_height="wrap_content"
            android:layout_margin="10sp"
            android:ems="10"
            android:inputType="textMultiLine" />
    </LinearLayout>

</LinearLayout>