<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/genreTitle"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="411dp"
        android:layout_height="660dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="80sp"
            android:layout_marginBottom="30sp"
            android:gravity="center">

            <ImageView
                android:id="@+id/stats_not_started_icon"
                android:layout_width="30dp"
                android:layout_height="20dp"
                android:layout_marginRight="15sp"
                app:srcCompat="@drawable/completed_icon"
                app:tint="@color/blue" />

            <TextView
                android:id="@+id/book_not_started_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="15sp"
                android:fontFamily="@font/questrial"
                android:gravity="center"
                android:text="@string/books_not_started_title" />

            <TextView
                android:id="@+id/book_not_started_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/questrial"
                android:gravity="center"
                android:text="TextView" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="80sp"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/not_started_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/questrial"
                android:text="@string/not_started_button" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30sp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/stats_in_progress_icon"
                android:layout_width="30dp"
                android:layout_height="20dp"
                android:layout_marginRight="15sp"
                app:srcCompat="@drawable/completed_icon"
                app:tint="@color/yellow" />

            <TextView
                android:id="@+id/book_in_progress_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="15sp"
                android:fontFamily="@font/questrial"
                android:gravity="center"
                android:text="@string/books_in_progress_title" />

            <TextView
                android:id="@+id/book_in_progress_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/questrial"
                android:gravity="center"
                android:text="TextView" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="80sp"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/in_progress_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/questrial"
                android:text="@string/in_progress_button" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30sp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/stats_completed_icon"
                android:layout_width="30dp"
                android:layout_height="20dp"
                android:layout_marginRight="15sp"
                app:srcCompat="@drawable/completed_icon"
                app:tint="@color/green" />

            <TextView
                android:id="@+id/books_completed_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="15sp"
                android:fontFamily="@font/questrial"
                android:gravity="center"
                android:text="@string/books_completed_title" />

            <TextView
                android:id="@+id/books_complete_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/questrial"
                android:gravity="center"
                android:text="TextView" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40sp"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/completed_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/questrial"
                android:text="@string/completed_button" />
        </LinearLayout>

    </LinearLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:backgroundTint="@color/brown"
        app:itemIconTint="@drawable/nav_bar_icon_color"
        app:itemTextColor="@drawable/nav_bar_text_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/bottom_nav_menu" />

</androidx.constraintlayout.widget.ConstraintLayout>