<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/home_activity_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    app:layout_anchorGravity="center">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="411dp"
        android:layout_height="627dp"
        app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/addTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="45dp"
            android:fontFamily="@font/questrial"
            android:gravity="center"
            android:text="@string/add_book_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/titleInput"
            android:layout_width="281dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:ems="10"
            android:fadingEdge="horizontal"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titleTitle" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="30sp"
            android:layout_height="20sp"
            android:layout_marginTop="58dp"
            app:layout_constraintStart_toStartOf="@+id/titleInput"
            app:layout_constraintTop_toBottomOf="@+id/addTitle"
            app:srcCompat="@drawable/title_icon" />

        <TextView
            android:id="@+id/titleTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="58dp"
            android:fontFamily="@font/questrial"
            android:text="@string/title_title"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toBottomOf="@+id/addTitle" />

        <EditText
            android:id="@+id/authorInput"
            android:layout_width="281dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:ems="10"
            android:fadingEdge="horizontal"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/authorTitle" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="30sp"
            android:layout_height="20sp"
            android:layout_marginTop="58dp"
            app:layout_constraintStart_toStartOf="@+id/authorInput"
            app:layout_constraintTop_toBottomOf="@+id/titleInput"
            app:srcCompat="@drawable/profile_icon" />

        <TextView
            android:id="@+id/authorTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="58dp"
            android:fontFamily="@font/questrial"
            android:text="@string/author_title"
            app:layout_constraintStart_toEndOf="@+id/imageView2"
            app:layout_constraintTop_toBottomOf="@+id/titleInput" />

        <EditText
            android:id="@+id/noteInput"
            android:layout_width="281dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:ems="10"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/noteTitle" />

        <TextView
            android:id="@+id/noteTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="58dp"
            android:fontFamily="@font/questrial"
            android:text="@string/note_title"
            app:layout_constraintStart_toEndOf="@+id/imageView3"
            app:layout_constraintTop_toBottomOf="@+id/authorInput" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="30sp"
            android:layout_height="20sp"
            android:layout_marginTop="58dp"
            app:layout_constraintStart_toStartOf="@+id/noteInput"
            app:layout_constraintTop_toBottomOf="@+id/authorInput"
            app:srcCompat="@drawable/note_icon" />

        <Button
            android:id="@+id/addButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="69dp"
            android:layout_marginBottom="49dp"
            android:fontFamily="@font/questrial"
            android:gravity="center"
            android:text="@string/add_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/noteInput" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:backgroundTint="@color/brown"
        app:itemIconTint="@drawable/nav_bar_icon_color"
        app:itemTextColor="@drawable/nav_bar_text_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/bottom_nav_menu" />

</androidx.constraintlayout.widget.ConstraintLayout>